lab2 과제 완료